--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,1 +1,27 @@
+rabbitmq.exchange: external.exchange
+
+queue: ai-chat-request.queue
+
+routing key: external.ai-chat-request.routing-key
+
+# RabbitMQ connection properties
+spring.rabbitmq.host=localhost
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
+
+# Declare the queue
+spring.rabbitmq.listener.simple.default-requeue-rejected=false
+spring.rabbitmq.listener.simple.retry.enabled=false
+spring.rabbitmq.listener.simple.acknowledge-mode=manual
+spring.rabbitmq.listener.simple.prefetch=1
+spring.rabbitmq.template.receive-timeout=5000
+
+# Queue declaration
+rabbitmq.queue.name=ai-chat-request.queue
+rabbtmq.exchange.name=external.exchange
+rabbitmq.routing.key=external.ai-chat-request.routing-key
+spring.rabbitmq.queue.durable=false
+spring.rabbitmq.queue.auto-delete=true
+spring.rabbitmq.queue.exclusive=false
 
