produce and listen from rabbitmq works

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,27 +1,23 @@
-rabbitmq.exchange: external.exchange
 
-queue: ai-chat-request.queue
 
-routing key: external.ai-chat-request.routing-key
-
-# RabbitMQ connection properties
-spring.rabbitmq.host=localhost
+## RabbitMQ connection properties
+spring.rabbitmq.host=sparrow.rmq.cloudamqp.com
 spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
+spring.rabbitmq.username=opbtfvfc
+spring.rabbitmq.password=UqbmIbSLsOGt9yf8z5gSGJGZs6GyRzLv
 
-# Declare the queue
-spring.rabbitmq.listener.simple.default-requeue-rejected=false
-spring.rabbitmq.listener.simple.retry.enabled=false
-spring.rabbitmq.listener.simple.acknowledge-mode=manual
-spring.rabbitmq.listener.simple.prefetch=1
-spring.rabbitmq.template.receive-timeout=5000
+## Declare the queue
+#spring.rabbitmq.listener.simple.default-requeue-rejected=false
+#spring.rabbitmq.listener.simple.retry.enabled=false
+#spring.rabbitmq.listener.simple.acknowledge-mode=manual
+#spring.rabbitmq.listener.simple.prefetch=1
+#spring.rabbitmq.template.receive-timeout=5000
 
 # Queue declaration
 rabbitmq.queue.name=ai-chat-request.queue
 rabbtmq.exchange.name=external.exchange
 rabbitmq.routing.key=external.ai-chat-request.routing-key
-spring.rabbitmq.queue.durable=false
-spring.rabbitmq.queue.auto-delete=true
-spring.rabbitmq.queue.exclusive=false
+#spring.rabbitmq.queue.durable=false
+#spring.rabbitmq.queue.auto-delete=true
+#spring.rabbitmq.queue.exclusive=false
 
